--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,14 @@
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
-if ( UNIX )
-    set(CMAKE_CXX_FLAGS "-D LINUX ${CMAKE_CXX_FLAGS}")
-elseif ( APPLE )
+if ( APPLE )
     set(CMAKE_CXX_FLAGS "-D OSX -stdlib=libc++ ${CMAKE_CXX_FLAGS}")
 
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
     set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -stdlib=libc++")
     set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++")
+elseif ( UNIX )
+    set(CMAKE_CXX_FLAGS "-D LINUX ${CMAKE_CXX_FLAGS}")
 elseif ( WIN32 )
 
 endif()
