--- a/src/monsters/monster_one/Makefile
+++ b/src/monsters/monster_one/Makefile
@@ -1,2 +1,3 @@
 all:
-	g++ createMonster.cpp MonsterEngine.cpp -std=c++0x -shared -o zizi.so -fPIC -I../../../dep -I../../client -I../../../dep/damncute
+	clang++ createMonster.cpp MonsterEngine.cpp -std=c++0x -shared -o zizi.so -fPIC -I../../../dep -I../../client -I../../../dep/damncute
+	cp zizi.so ../../../rtype/bin/
