--- a/src/monsters/monster_one/Makefile
+++ b/src/monsters/monster_one/Makefile
@@ -1,3 +1,3 @@
 all:
-	clang++ createMonster.cpp MonsterEngine.cpp -std=c++0x -shared -o zizi.so -fPIC -I../../../dep -I../../client -I../../../dep/damncute
+	clang++ createMonster.cpp MonsterEngine.cpp -stdlib=libc++ -std=c++0x -shared -o zizi.so -fPIC -I../../../dep -I../../client -I../../../dep/damncute
 	cp zizi.so ../../../rtype/bin/
