--- a/src/monsters/monster_test/CMakeLists.txt
+++ b/src/monsters/monster_test/CMakeLists.txt
@@ -28,7 +28,7 @@ file(GLOB_RECURSE source_game ../../client/game/*.cpp ../../client/game/*.h ../.
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
 
-file(GLOB_RECURSE source_monster_test monsters/monster_test/*.cpp monsters/monster_test/*.h monsters/monster_test/*.hh monsters/monster_test/*.hpp)
+file(GLOB_RECURSE source_monster_test *.cpp *.h *.hh *.hpp)
 set(monster_test_SRCS
     ${monster_test_SRCS}
     ${source_file}
