Static lib instead of dynamics

--- a/dep/damncute/CMakeLists.txt
+++ b/dep/damncute/CMakeLists.txt
@@ -48,9 +48,9 @@ set(DAMNCUTE_LIBRARY_NAME "damncute")
 
 add_library(
     ${DAMNCUTE_LIBRARY_NAME}
-    SHARED
+    #    SHARED
     ${damncute_SRCS}
 )
 target_link_libraries(${DAMNCUTE_LIBRARY_NAME} ${ALL_LIBS})
 
-install(TARGETS ${DAMNCUTE_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+#install(TARGETS ${DAMNCUTE_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
