--- a/dep/shared/CMakeLists.txt
+++ b/dep/shared/CMakeLists.txt
@@ -41,9 +41,9 @@ set(SHARED_LIBRARY_NAME "shared")
 
 add_library(
     ${SHARED_LIBRARY_NAME}
-    SHARED
+    #    SHARED
     ${shared_SRCS}
 )
 target_link_libraries(${SHARED_LIBRARY_NAME} ${ALL_LIBS})
 
-install(TARGETS ${SHARED_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+#install(TARGETS ${SHARED_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
