Fix Damncute build

--- a/dep/shared/CMakeLists.txt
+++ b/dep/shared/CMakeLists.txt
@@ -45,5 +45,8 @@ add_library(
     ${shared_SRCS}
 )
 target_link_libraries(${SHARED_LIBRARY_NAME} ${ALL_LIBS})
+if ( WIN32 )
+	target_link_libraries(${SHARED_LIBRARY_NAME} ws2_32)
+endif()
 
 #install(TARGETS ${SHARED_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
