Switch libs to SHARED

--- a/dep/damncute/CMakeLists.txt
+++ b/dep/damncute/CMakeLists.txt
@@ -43,8 +43,9 @@ set(DAMNCUTE_LIBRARY_NAME "damncute")
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
 
 add_library(${DAMNCUTE_LIBRARY_NAME}
+    SHARED
     ${damncute_SRCS}
 )
 target_link_libraries(${DAMNCUTE_LIBRARY_NAME} ${SFML_LIBRARY})
 
-#install(TARGETS ${DAMNCUTE_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+install(TARGETS ${DAMNCUTE_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
