--- a/dep/shared/CMakeLists.txt
+++ b/dep/shared/CMakeLists.txt
@@ -50,4 +50,4 @@ if ( WIN32 )
 	target_link_libraries(${SHARED_LIBRARY_NAME} ws2_32)
 endif()
 
-#install(TARGETS ${SHARED_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+install(TARGETS ${SHARED_LIBRARY_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
