Fix shared's SHARED

--- a/dep/shared/CMakeLists.txt
+++ b/dep/shared/CMakeLists.txt
@@ -43,6 +43,7 @@ set(SHARED_LIBRARY_NAME "shared")
 
 add_library(
     ${SHARED_LIBRARY_NAME}
+    SHARED
     ${shared_SRCS}
 )
 target_link_libraries(${SHARED_LIBRARY_NAME} ${ALL_LIBS})
