--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -63,6 +63,10 @@ elseif ( UNIX )
 endif()
 
 install_targets(/bin ${CLIENT_EXECUTABLE_NAME})
-install_programs(/bin ${CLIENT_NAME})
+if ( WIN32 )
+	install_programs(/bin ${CLIENT_NAME}.bat)
+else()
+	install_programs(/bin ${CLIENT_NAME})
+endif()
 install_files(/etc ${CLIENT_NAME}.conf.dist)
 install (DIRECTORY ${CMAKE_SOURCE_DIR}/resources DESTINATION "${CMAKE_INSTALL_PREFIX}")
